[package]
name = "av1converter"
version = "2.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ratatui = "0.30"
crossterm = "0.29"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"

# Utilities
dirs = "6.0"
humansize = "2.1.3"

# New dependencies
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros"] }
toml = "0.9.8"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
regex = "1"
walkdir = "2"
tempfile = "3"

# Unix-specific to check disk space
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }
