[package]
name = "av1converter"
version = "2.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros"] }
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
uuid = { version = "1.21.0", features = ["v4"] }
chrono = "0.4"
walkdir = "2"
tempfile = "3.25.0"
toml = "0.9.11"
regex = "1.12.3"
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"

# Utilities
dirs = "6.0"
humansize = "2.1.3"
