[package]
name = "av1converter"
version = "2.2.1"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros"] }
toml = "0.9.11"
regex = "1.12.3"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"
